# checkers

./: .vimspector.json  Cargo.toml
src/: actor.rs  board.rs  board_state.rs  main.rs  piece.rs  point.rs  side.rs
src/game/: board.rs  mod.rs  terminal.rs
